# daoopt-exp

./: .gitignore  CMakeLists.txt  README.md  daoopt.cpp  daoopt_lookahead.cpp  daoopt_solver.cpp  fglpMbeCompare.cpp  fglpPreproc.cpp  fglpTesting.cpp  mplpMbeCompare.cpp  solver
ARP/: ARPall.hxx  CMakeLists.txt  Explanation.hxx  LICENSE.txt
ARP/BE/: BEworkspace.cpp  BEworkspace.hxx  Bucket.cpp  Bucket.cpp.bak  Bucket.hxx  MBEworkspace.cpp  MBEworkspace.hxx  MiniBucket.cpp  MiniBucket.hxx
ARP/CVO/: Graph.cpp  Graph.hxx  Graph_MinFillOrderComputation.cpp  Graph_RemoveRedundantFillEdges.cpp  ProblemGraphNode.hxx  VariableOrderComputation.cpp  VariableOrderComputation.cpp.bak  VariableOrderComputation.hxx  cvo_samples.cpp
ARP/Problem/: Function.cpp  Function.hxx  FunctionTableBlock.cpp  FunctionTableBlock.hxx  Globals.cpp  Globals.hxx  Problem.cpp  Problem.hxx  Workspace.cpp  Workspace.hxx
ARP/Utils/: AVLtree.cpp  AVLtree.hxx  AVLtreeSimple.cpp  AVLtreeSimple.hxx  Array.cpp  FnExecutionThread.cpp  FnExecutionThread.hxx  FnExecutionThread.hxx.bak  Heap.cpp  HeapBasic.cpp  HeapBasicReductionWithPermutationMapping.cpp  MersenneTwister.h  MiscUtils.cpp  MiscUtils.hxx  Mutex.cpp  Mutex.h  RandomProblemGenerator.hxx  Sort.cxx  Sort.hxx
Debug/: makefile  objects.mk  subdir.mk
Debug/lib/: subdir.mk
Debug/lib/mex/: subdir.mk
Debug/source/: subdir.mk
Worker/: makefile  objects.mk  sources.mk  subdir.mk
Worker/lib/: subdir.mk
Worker/source/: subdir.mk
daoopt/: CMakeLists.txt
daoopt/lib/: CMakeLists.txt
daoopt/lib/google-utils/: CMakeLists.txt
daoopt/lib/google-utils/base/: mutex.h  stringprintf.cc  sysinfo.cc  walltime.cc  walltime.h
daoopt/lib/google-utils/strings/: ascii_ctype.h  stringpiece.cc  stringpiece.h  substitute.cc
daoopt/lib/sls4mpe/: AssignmentManager.cpp  CMakeLists.txt  global.h  main_algo.cpp  main_algo.h
daoopt/lib/zlib/: CMakeLists.txt  Makefile  cmake_install.cmake  zconf.h
daoopt/source/: AOStar.cpp  AOStar.h  AnytimeAOStar.cpp  AnytimeAOStar.h  BFSearchNode.h  BFSearchSpace.h  BestFirst.cpp  BestFirst.h  BoundPropagator.cpp  BoundPropagator.h  BranchAndBound.cpp  BranchAndBoundMaster.cpp  BranchAndBoundRotate.cpp  BranchAndBoundRotate.h  CacheTable.h  DEFINES.h  DaooptInterface.cpp  DaooptInterface.h  FGLP.cpp  FGLPHeuristic.cpp  FGLPHeuristic.h  FGLPMBEHybrid.cpp  FGLPMBEHybrid.h  Function.cpp  Function.h  Heuristic.h  LearningEngine.cpp  LimitedDiscrepancy.cpp  Main.cpp  Main.h  MiniBucket.cpp  MiniBucket.h  MiniBucketElim.cpp  MiniBucketElim.h  MiniBucketElimInc.cpp  MiniBucketElimInc.h  MiniBucketElimLH.cpp  MiniBucketElimLH.h  MiniBucketElimLHobsolete.cpp  MiniBucketElimLHobsolete.h  (+31 more)
include/: BestFirst.h  BranchAndBound.h  BranchAndBoundRotate.h  ExtraNodeInfo.h  FGLP.h  FGLPHeuristic.h  FGLPMBEHybrid.h  Function.h  Heuristic.h  MBEHeuristicInstance.h  Main.h  MiniBucket.h  MiniBucketElim.h  MiniBucketElimDynMM.h  MiniBucketElimMM.h  MiniBucketElimMplp.h  PriorityFGLP.h  Problem.h  ProgramOptions.h  Pseudotree.h  ResidualFGLP.h  Search.h  SearchNode.h  SearchSpace.h  _base.h  utils.h
lib/: CMakeLists.txt
lib/ARP/: ARPall.hxx  CMakeLists.txt
lib/ARP/BE/: BEworkspace.cpp  BEworkspace.hxx  Bucket.cpp  Bucket.hxx  MiniBucket.cpp  MiniBucket.hxx
lib/ARP/CVO/: CVO.cpp  Graph.cpp  Graph_MinFillOrderComputation.cpp  Graph_RemoveRedundantFillEdges.cpp  ProblemGraphNode.hxx  VariableOrderComputation.cpp  VariableOrderComputation.hxx  cvo.h  cvo_samples.cpp
lib/ARP/Problem/: Function.cpp  Function.hxx  FunctionTableBlock.cpp  FunctionTableBlock.hxx  Globals.cpp  Globals.hxx  Problem.cpp  Problem.hxx  Workspace.cpp  Workspace.hxx
lib/ARP/Utils/: AVLtree.cpp  AVLtreeSimple.cpp  Array.cpp  Array.hxx  FnExecutionThread.cpp  FnExecutionThread.hxx  Heap.cpp  Heap.hxx  HeapBasic.cpp  HeapBasicReductionWithPermutationMapping.cpp  MiscUtils.cpp  MiscUtils.hxx  Mutex.cpp  Mutex.h  RandomProblemGenerator.hxx  Sort.cxx  Sort.hxx
lib/cvo/ARP/: Mutex.cpp  Problem.cpp  VariableOrderComputation.cpp
lib/google-utils/base/: CMakeLists.txt  hash.h  logging.cc  logging.h  port.h  strtoint.h
lib/google-utils/strings/: CMakeLists.txt  ascii_ctype.cc  join.h  numbers.cc  numbers.h  split.cc  split.h  stringpiece.h
lib/google-utils/util/gtl/: stl_util.h
lib/mex/: Factor.cpp  Factor.h  VarSet.h  enum.h  indexedHeap.h  mxObject.h  mxUtil.h
lib/miniSAT/: CMakeLists.txt  Solver.cpp  Solver.h
lib/sls4mpe/: AssignmentManager.cpp  AssignmentManager.h  Makefile  cmake_install.cmake  global.h  main_algo.cpp
mex/: CMakeLists.txt  mex-workspace.cpp  mex-workspace.h  mk
mex/include/: Factor.h  FactorDense.h  FactorSparse.h  VarSet.h  alg.h  enum.h  factorgraph.h  gbp.h  graph.h  graphmodel.h  indexedHeap.h  lbp.h  map.h  mbe.h  mplp.h  mxObject.h  mxUtil.h  rbtree.h  regiongraph.h  set.h  stack.h  subindex.h  vector.h
mex/src/: Factor.cpp  FactorDense.cpp  FactorSparse.cpp  factorgraph.cpp  graphmodel.cpp
miniSAT/: CMakeLists.txt  Solver.cpp  SolverTypes.h
minisat/: Alg.h  Alloc.h  CMakeLists.txt  Heap.h  Map.h  Queue.h  Solver.cc  Solver.h  SolverTypes.h  Sort.h  Vec.h  XAlloc.h
old_exec/: daoopt.cpp  fglpMbeCompare.cpp  fglpPreproc.cpp
source/: BestFirst.cpp  BestFirst.h  BoundPropagator.cpp  BoundPropagator.h  BoundPropagatorMaster.cpp  BoundPropagatorMaster.h  BranchAndBound.cpp  BranchAndBound.h  BranchAndBoundMaster.h  BranchAndBoundRotate.cpp  BranchAndBoundRotate.h  BranchAndBoundSampler.cpp  BranchAndBoundSampler.h  CacheTable.h  DaooptInterface.cpp  DaooptInterface.h  ExtraNodeInfo.h  FGLP.cpp  FGLP.h  FGLPHeuristic.cpp  FGLPHeuristic.h  FGLPMBEHybrid.cpp  FGLPMBEHybrid.h  Function.cpp  Function.h  Graph.h  Heuristic.h  LearningEngine.h  LimitedDiscrepancy.cpp  LimitedDiscrepancy.h  MBEHeuristicInstance.cpp  Main.cpp  Main.h  MiniBucket.cpp  MiniBucketElim.cpp  MiniBucketElim.h  MiniBucketElimDynMM.cpp  MiniBucketElimLH.cpp  MiniBucketElimLH.h  ParallelManager.cpp  (+26 more)
zchaff/: CMakeLists.txt  zchaff_base.cpp  zchaff_base.h  zchaff_dbase.cpp  zchaff_dbase.h  zchaff_header.h  zchaff_solver.cpp  zchaff_solver.h  zchaff_utils.cpp
(+6 files in other folders)
